load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.chrono",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        "@boost.assert",
        "@boost.config",
        "@boost.core",
        "@boost.integer",
        "@boost.move",
        "@boost.mpl",
        "@boost.predef",
        "@boost.ratio",
        "@boost.static_assert",
        "@boost.system",
        "@boost.throw_exception",
        "@boost.type_traits",
        "@boost.typeof",
        "@boost.utility",
        "@boost.winapi",
    ],
)
